--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import "../styles/global.css";
 
 const { titre } = Astro.props;
 ---
@@ -16,5 +17,6 @@ const { titre } = Astro.props;
         <main>
             <slot />
         </main>
+        <footer></footer>
     </body>
 </html>
