--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout titre="Accueil">
-	<h1>Accueil</h1>
+	<div class="container mx-auto px-4 py-8">
+	
+	</div>
 </Layout>
