--- a/src/pages/offre.astro
+++ b/src/pages/offre.astro
@@ -49,7 +49,7 @@ const offres = [
 		>
 			Afficher les favoris
 		</button>
-		<div class="space-y-4">
+		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 			{
 				offres.map((offre) => (
 					<OffreCard
