--- a/src/pages/offre.astro
+++ b/src/pages/offre.astro
@@ -17,20 +17,7 @@ const offres = await getOffres();
 			Afficher les favoris
 		</button>
 		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-			{
-				offres.map((offre) => (
-					<OffreCard
-						nomMaison={offre.nomMaison}
-						adresse={offre.adresse}
-						nbChambres={offre.nbChambres}
-						nbSdb={offre.nbSdb}
-						surface={offre.surface}
-						prix={offre.prix}
-						favori={offre.favori}
-						imgUrl={offre.imgUrl}
-					/>
-				))
-			}
+			{offres.map((offre) => <OffreCard offre={offre} />)}
 		</div>
 	</div>
 </Layout>
