--- a/src/components/PbImage.astro
+++ b/src/components/PbImage.astro
@@ -2,7 +2,7 @@
 import { getImageUrl } from "../backend.mjs";
 import { Image } from "astro:assets";
 
-const { record, recordImage } = Astro.props;
+const { record, recordImage, width = 400, height = 300 } = Astro.props;
 
 const imageURL = await getImageUrl(record, recordImage);
 ---
@@ -12,7 +12,8 @@ const imageURL = await getImageUrl(record, recordImage);
         <Image
             src={imageURL}
             alt={record.nom_maison || "images"}
-            inferSize={true}
+            width={width}
+            height={height}
         />
     )
 }
