--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <a href="/">Accueil</a>
-        <a href="/offre">Offres</a>
+        <a href="/offres">Offres</a>
     </nav>
 </header>
 
