--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -6,8 +6,9 @@ import PbImage from "./PbImage.astro";
 <div class="card">
     <PbImage record={offre} recordImage={offre.images[0]} />
 
-
     <p>{offre.nom_maison}</p>
 
     {offre.favori && <span class="favori">★ Favori</span>}
+
+    <a href={`/offres/${offre.id}`}>Voir plus</a>
 </div>
