--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,15 +1,63 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import OffreCard from "../../components/OffreCard.astro";
-import { getOffres } from "../../backend.mjs";
+import { getOffres, filterByPrix } from "../../backend.mjs";
 
-const offres = await getOffres();
+let message = "";
+let Offres;
+if (Astro.request.method === "POST") {
+	const data = await Astro.request.formData();
+	const minPrix = parseInt(data.get("minPrix") as string);
+	const maxPrix = parseInt(data.get("maxPrix") as string);
+
+	if (minPrix > 0 && maxPrix > 0 && maxPrix > minPrix) {
+		Offres = await filterByPrix(minPrix, maxPrix);
+		if (Offres.length === 0) {
+			message = `Pas d'offres entre ${minPrix}€ et ${maxPrix}€`;
+		} else {
+			message = `Liste des offres entre ${minPrix}€ et ${maxPrix}€`;
+		}
+	} else {
+		message = "Veuillez entrer des valeurs valides pour le prix.";
+		Offres = await getOffres();
+	}
+} else {
+	Offres = await getOffres();
+}
 ---
 
 <Layout titre="Offres">
 	<h1 class="text-3xl font-bold mb-6">Offres</h1>
 
 	<div class="container mx-auto px-4">
+		<form action="/offres" method="POST" class="mb-4">
+			<input
+				type="number"
+				name="minPrix"
+				placeholder="Prix minimum"
+				class="p-2 border border-gray-300 rounded-md"
+			/>
+			<input
+				type="number"
+				name="maxPrix"
+				placeholder="Prix maximum"
+				class="p-2 border border-gray-300 rounded-md"
+			/>
+			<input
+				type="submit"
+				value="Filtrer par prix"
+				class="bg-blue-600 text-white p-2 rounded-md hover:bg-blue-700 transition-colors cursor-pointer"
+			/>
+		</form>
+
+		{
+			message && (
+				<div class="p-4 mb-4 rounded-md bg-blue-100 text-blue-800">
+					{message}
+				</div>
+			)
+		}
+
 		<div class="flex gap-4 mb-4">
 			<button
 				id="favori-button"
@@ -25,7 +73,7 @@ const offres = await getOffres();
 			</a>
 		</div>
 		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-			{offres.map((offre) => <OffreCard offre={offre} />)}
+			{Offres.map((offre) => <OffreCard offre={offre} />)}
 		</div>
 	</div>
 </Layout>
